feat: add tracker controllers
