# api/controllers/trackers.go
@@ -5,16 +5,21 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/tech-thinker/linkly/models"
+	"github.com/tech-thinker/linkly/repository"
+	"github.com/tech-thinker/linkly/utils"
 )
 
 type Trackers interface {
 	GenerateTracker(ctx *gin.Context)
 	GetTrackers(ctx *gin.Context)
 	GetTracker(ctx *gin.Context)
+	QRCode(ctx *gin.Context)
 	Status(ctx *gin.Context)
+	DeleteTracker(ctx *gin.Context)
 }
 
-type tracker struct {
+type trackers struct {
+	track repository.Tracker
 }
 
 // GenerateTracker generates a new tracker
@@ -26,9 +31,32 @@ type tracker struct {
 // @Produce  json
 // @Success 200 {object} models.Tracker
 // @Failure 500 {object} models.Error
-// @Router /api/v1/trackers [post]
-func (t *tracker) GenerateTracker(ctx *gin.Context) {
-	var tracker models.Tracker
+// @Router /api/v1/trackers/gen [get]
+func (t *trackers) GenerateTracker(ctx *gin.Context) {
+	tracker := models.Tracker{}
+	var err error
+
+	tracker.ID = utils.GenerateShortURL()
+	ip := ctx.ClientIP()
+	tracker.IP = &ip
+	hostname := ctx.Request.Host
+	url := "http://" + hostname + "/api/v1/trackers/" + tracker.ID + "/qr.png"
+	tracker.URL = url
+
+	// Save tracker to database
+	err = t.track.GenerateTracker(ctx, &tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to save tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
 	ctx.JSON(http.StatusOK, tracker)
 }
 
@@ -42,9 +70,21 @@ func (t *tracker) GenerateTracker(ctx *gin.Context) {
 // @Success 200 {array} models.Tracker
 // @Failure 500 {object} models.Error
 // @Router /api/v1/trackers [get]
-func (t *tracker) GetTrackers(ctx *gin.Context) {
-	var trackers []models.Tracker
-	ctx.JSON(http.StatusNotImplemented, trackers)
+func (t *trackers) GetTrackers(ctx *gin.Context) {
+	trackers, err := t.track.GetTrackers(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to get trackers",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, trackers)
 }
 
 // GetTracker returns a tracker
@@ -55,11 +95,99 @@ func (t *tracker) GetTrackers(ctx *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} models.Tracker
+// @Failure 404 {object} models.Error
 // @Failure 500 {object} models.Error
 // @Router /api/v1/trackers/{id} [get]
-func (t *tracker) GetTracker(ctx *gin.Context) {
-	var tracker models.Tracker
-	ctx.JSON(http.StatusNotImplemented, tracker)
+func (t *trackers) GetTracker(ctx *gin.Context) {
+	id := ctx.Param("id")
+	tracker := models.Tracker{
+		ID: id,
+	}
+	tracker, err := t.track.GetTracker(ctx, tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to get tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	if tracker.ID == "" {
+		ctx.JSON(http.StatusNotFound, models.Error{
+			Error: models.ServiceError{
+				Type:   "not_found",
+				Title:  "not_found",
+				Detail: "tracker not found",
+				Status: http.StatusNotFound,
+			},
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, tracker)
+}
+
+// QRCode returns a qr code png for a tracker
+// @Summary Get a qr code png for a tracker
+// @Description Get a qr code png for a tracker
+// @ID get-qr-code
+// @Tags trackers
+// @Accept  json
+// @Produce  data:image/png
+// @Success 200 {object} models.Tracker.Image
+// @Failure 404 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /api/v1/trackers/{id}/qr.png [get]
+func (t *trackers) QRCode(ctx *gin.Context) {
+	id := ctx.Param("id")
+	tracker := models.Tracker{
+		ID: id,
+	}
+	tracker, err := t.track.GetTracker(ctx, tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to get tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	if tracker.ID == "" {
+		ctx.JSON(http.StatusNotFound, models.Error{
+			Error: models.ServiceError{
+				Type:   "not_found",
+				Title:  "not_found",
+				Detail: "tracker not found",
+				Status: http.StatusNotFound,
+			},
+		})
+		return
+	}
+
+	tracker.VisitCount++
+	err = t.track.Update(ctx, &tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to update tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	image := utils.GenerateTrackerImage()
+	ctx.Data(http.StatusOK, "image/png", image)
 }
 
 // Status returns the status of the tracker
@@ -72,12 +200,109 @@ func (t *tracker) GetTracker(ctx *gin.Context) {
 // @Success 200 {object} models.TrackerStatus
 // @Failure 500 {object} models.Error
 // @Router /api/v1/trackers/{id}/status [get]
-func (t *tracker) Status(ctx *gin.Context) {
+func (t *trackers) Status(ctx *gin.Context) {
 	var trackerStatus models.TrackerStatus
-	ctx.JSON(http.StatusNotImplemented, trackerStatus)
+	id := ctx.Param("id")
+	tracker := models.Tracker{
+		ID: id,
+	}
+	tracker, err := t.track.GetTracker(ctx, tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to get tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	if tracker.ID == "" {
+		ctx.JSON(http.StatusNotFound, models.Error{
+			Error: models.ServiceError{
+				Type:   "not_found",
+				Title:  "not_found",
+				Detail: "tracker not found",
+				Status: http.StatusNotFound,
+			},
+		})
+		return
+	}
+	trackerStatus.ID = tracker.ID
+	trackerStatus.URL = tracker.URL
+	trackerStatus.Message = "not seen"
+	if tracker.VisitCount > 0 {
+		trackerStatus.Seen = true
+		trackerStatus.Message = "seen"
+	}
+
+	ctx.JSON(http.StatusOK, trackerStatus)
+}
+
+// DeleteTracker deletes a tracker
+// @Summary Delete a tracker
+// @Description Delete a tracker
+// @ID delete-tracker
+// @Tags trackers
+// @Accept  json
+// @Produce  json
+// @Success 204 {object} models.Message
+// @Failure 404 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /api/v1/trackers/{id} [delete]
+func (t *trackers) DeleteTracker(ctx *gin.Context) {
+	id := ctx.Param("id")
+	tracker := models.Tracker{
+		ID: id,
+	}
+	tracker, err := t.track.GetTracker(ctx, tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to get tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+
+	if tracker.ID == "" {
+		ctx.JSON(http.StatusNotFound, models.Error{
+			Error: models.ServiceError{
+				Type:   "not_found",
+				Title:  "not_found",
+				Detail: "tracker not found",
+				Status: http.StatusNotFound,
+			},
+		})
+		return
+	}
+	err = t.track.Delete(ctx, &tracker)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, models.Error{
+			Error: models.ServiceError{
+				Type:   "service_error",
+				Title:  "service_error",
+				Detail: "failed to delete tracker",
+				Status: http.StatusInternalServerError,
+			},
+		})
+		return
+	}
+	msg := models.Message{
+		Code:    http.StatusOK,
+		Message: "tracker deleted",
+	}
+	ctx.JSON(http.StatusOK, msg)
 }
 
 // NewTrackers returns a new trackers controller
-func NewTrackers() Trackers {
-	return &tracker{}
+func NewTrackers(tracker repository.Tracker) Trackers {
+	return &trackers{
+		track: tracker,
+	}
 }
