# models/tracker.go
@@ -7,10 +7,9 @@ import (
 // Tracker is a struct that holds the data for a tracker
 type Tracker struct {
 	ID          string    `json:"id" gorm:"primary_key"`
-	Link        string    `json:"link"`
+	URL         string    `json:"url"`
 	Description *string   `json:"description,omitempty"`
 	VisitCount  int       `json:"visit_count"`
-	Image       []byte    `json:"image"`
 	UserID      *string   `json:"user_id,omitempty"`
 	IP          *string   `json:"ip,omitempty"`
 	CreatedAt   time.Time `json:"created_at"`
@@ -19,5 +18,8 @@ type Tracker struct {
 
 // TrackerStatus is the status of the tracker
 type TrackerStatus struct {
+	ID      string `json:"id"`
+	URL     string `json:"url"`
+	Seen    bool   `json:"seen"`
 	Message string `json:"message"`
 }
